fixes hamburger and spacing

--- a/components/theme/header.module.scss
+++ b/components/theme/header.module.scss
@@ -39,7 +39,9 @@
 }
 
 .headerLinks {
-	display: none;
+	display: flex;
+	align-items: center;
+	gap: 35px;
 }
 
 @media only screen and (min-width: $mediumDeviceWidth) {
@@ -49,11 +51,5 @@
 
 	.hamburgerMenu {
 		display: none;
-	}
-
-	.headerLinks {
-		display: flex;
-		align-items: center;
-		gap: 35px;
 	}
 }
