--- a/pages/profile.module.scss
+++ b/pages/profile.module.scss
@@ -14,6 +14,7 @@
 	align-items: center;
 	margin-bottom: 25px;
 	max-width: 590px;
+	padding: 0 15px;
 }
 
 .subheadingNameSection {
@@ -49,6 +50,12 @@
 	font-size: 28px;
 	font-family: "Manrope ExtraBold";
 	margin-bottom: 30px;
+}
+
+@media only screen and (min-width: 610px) {
+	.profileSubheading {
+		padding: 0;
+	}
 }
 
 @media only screen and (min-width: $tabletDeviceWidth) {
